--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-<h3>Simple Storage dApp 예제 get, set을 이용하여 블록체인에 값 쓰고 </h3>
+<h3>Simple Storage dApp 만들어볼께  </h3>
 <ul>
   <li>컨트랙트 주소: <span id="contractAddr"></span></li>
   <li>내 어카운트 주소: <span id="accountAddr"></span></li>
