--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
-  <title> 블록체인 공부 열심히 하자 윤경짱...</title>
+  <title> Etherium Simple App</title>
   <style>
     body {margin-left:50px;}
     #storedData {font-size:300%; margin-right:10px;}
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-<h3>Simple Storage dApp 만들어볼께  </h3>
+<h3> 윤경짱 열심히 만들어볼께...  </h3>
 <ul>
   <li>컨트랙트 주소: <span id="contractAddr"></span></li>
   <li>내 어카운트 주소: <span id="accountAddr"></span></li>
