--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-<h3> 윤경짱 열심히 만들어볼께...  </h3>
+<h3> Blockchain 에 값 읽고 쓰기   </h3>
 <ul>
   <li>컨트랙트 주소: <span id="contractAddr"></span></li>
   <li>내 어카운트 주소: <span id="accountAddr"></span></li>
