--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
   </style>
 </head>
 <body>
-<h3> 게임스코어   </h3>
+<h3> 게임스코어 </h3>
 <ul>
   <li>컨트랙트 주소: <span id="contractAddr"></span></li>
   <li>내 어카운트 주소: <span id="accountAddr"></span></li>
-  <li>컨트랙트에 저장된 값: <span id="storedData"></span>
-    <button onclick="getValue()">새로고침</button> (현재블록: <span id="lastBlock"></span>)</li>
   
-  <li> 게임스코어 보드 : 총 등록자수 <span id="totalPlayer"></span></li>
+  <li><input id="newValue" type="text"><button onclick="setValue()">점수 기록</button>
+      <div id="result"></div></li>
+  <li>새 값을 저장한 후 팬딩 트랜잭션이 블록에 포함되면 자동으로 페이지가 업데이트될 것입니다.</li>
+  
+  <li> 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span></li>
   <li> 1위 : <span id='GOLD'></span></li>
   <li> 2위 : <span id='SILVER'></span></li>
   <li> 3위 : <span id='BRONZE'></span></li>
   
-  
-  
-  <li><input id="newValue" type="text"><button onclick="setValue()">새 값으로 저장하기</button>
-      <div id="result"></div></li>
-  <li>새 값을 저장한 후 팬딩 트랜잭션이 블록에 포함되면 자동으로 페이지가 업데이트될 것입니다.</li>
 </ul>
   
   
@@ -37,7 +34,7 @@
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <!-- script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script -->
 <script>
-var contractAddress = '0xb39d876995d7e0d24bc396a30f463251f02b5d72';
+var contractAddress = '0x692a70d2e424a56d2c6c27aa97d1a86395877b3a';
 var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"get","outputs":[{"name":"","type":"uint256"}],"payable":false,"type":"function"}];
 var simpleStorageContract;
 var simpleStorage;
@@ -62,6 +59,7 @@ function startApp() {
     document.getElementById('accountAddr').innerHTML = getLink(r[0]);
   });
   getValue();
+  getTotalPlayers();
 }
 function getLink(addr) {
   return '<a target="_blank" href=https://testnet.etherscan.io/address/' + addr + '>' + addr +'</a>';
@@ -72,6 +70,11 @@ function getValue() {
   });
   web3.eth.getBlockNumber(function(e,r){
     document.getElementById('lastBlock').innerHTML = r;
+  });
+}
+function getTotalPlayers() {
+  simpleStorage.get(function(e,r){
+    document.getElimentById('totalPlayers').innerHTML = r;
   });
 }
 function setValue() {
