--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="result"></div></li>
   <li>새 값을 저장한 후 팬딩 트랜잭션이 블록에 포함되면 자동으로 페이지가 업데이트될 것입니다.</li>
   
-  <li> 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span></li>
+  <li> 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span>명</li>
   <li> 1위 : <span id='GOLD'></span></li>
   <li> 2위 : <span id='SILVER'></span></li>
   <li> 3위 : <span id='BRONZE'></span></li>
