--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ function getValue() {
 function getTotalPlayers() {
   simpleStorage.GetTotalPlayers(function(e,r){
     document.getElimentById('totalPlayers').innerHTML = r;
+	  alert(r);
   });
 }
 function setValue() {
