--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ var abi = [
 				"type": "address"
 			},
 			{
-				"name": "_score",
+				"name": "_s",
 				"type": "uint16"
 			}
 		],
@@ -52,20 +52,6 @@ var abi = [
 		"outputs": [],
 		"payable": false,
 		"stateMutability": "nonpayable",
-		"type": "function"
-	},
-	{
-		"constant": true,
-		"inputs": [],
-		"name": "CountScore",
-		"outputs": [
-			{
-				"name": "",
-				"type": "uint256"
-			}
-		],
-		"payable": false,
-		"stateMutability": "view",
 		"type": "function"
 	},
 	{
@@ -84,7 +70,7 @@ var abi = [
 			},
 			{
 				"name": "",
-				"type": "uint128"
+				"type": "uint16"
 			}
 		],
 		"payable": false,
@@ -98,7 +84,7 @@ var abi = [
 		"outputs": [
 			{
 				"name": "",
-				"type": "uint128"
+				"type": "uint16"
 			}
 		],
 		"payable": false,
