--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ function startApp() {
   web3.eth.getAccounts(function(e,r){
     document.getElementById('accountAddr').innerHTML = getLink(r[0]);
   });
-  getValue();
+  //getValue();
   getTotalPlayers();
 }
 function getLink(addr) {
