--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ window.addEventListener('load', function() {
   startApp();
 });
 function startApp() {
+  alert("init start");
   simpleStorageContract = web3.eth.contract(abi);
   simpleStorage = simpleStorageContract.at(contractAddress);
   document.getElementById('contractAddr').innerHTML = getLink(contractAddress);
