--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title> Etherium Simple App</title>
   <style>
     body {margin-left:50px;}
-    #storedData {font-size:300%; margin-right:10px;}
+    //#storedData {font-size:300%; margin-right:10px;}
     #newValue {width: 200px; margin-right:10px; text-align:right;}
   </style>
 </head>
@@ -130,15 +130,17 @@ window.addEventListener('load', function() {
   startApp();
 });
 function startApp() {
+  console.log("start");
   simpleStorageContract = web3.eth.contract(abi);
   simpleStorage = simpleStorageContract.at(contractAddress);
   document.getElementById('contractAddr').innerHTML = getLink(contractAddress);
   web3.eth.getAccounts(function(e,r){
     document.getElementById('accountAddr').innerHTML = getLink(r[0]);
   });
-
+  console.log("account read ok");
   //getValue();
   getTotalPlayers();
+	console.log("players read ok");
 }
 function getLink(addr) {
   return '<a target="_blank" href=https://testnet.etherscan.io/address/' + addr + '>' + addr +'</a>';
