--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function getValue() {
 }*/
 function getTotalPlayers() {
   simpleStorage.GetTotalPlayers(function(e,r){
-    document.getElimentById('totalPlayers').innerHTML = r.toNumber();
+    document.getElementById('totalPlayers').innerHTML = r.toNumber();
   });
 }
 /*
