--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ function uploadScore() {
 
   var filter = web3.eth.filter('latest');
   filter.watch(function(e, r) {
-    getValue();
+    //getValue(); refresh the data
     web3.eth.getTransaction(txid, function(e,r){
       if (r != null && r.blockNumber > 0) {
         document.getElementById('pending').innerHTML = '(기록된 블록: ' + r.blockNumber + ')';
