--- a/index.html
+++ b/index.html
@@ -20,13 +20,6 @@
         <meta property="og:url" content="http://ellisonleao.github.io/clumsy-bird/"/>
         <meta property="og:site_name" content="Clumsy Bird - MelonJS"/>
 
-        <!-- Twitter Card -->
-        <meta name="twitter:hashtag" content="clumsybird" />
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@ellisonleao" />
-        <meta name="twitter:creator" content="@ellisonleao" />
-        <meta name="twitter:title" content="Clumsy Bird" />
-        <meta name="twitter:description" content="A Flappy Bird melonJS clone" />
 
         <!-- Humans -->
         <link rel="author" href="humans.txt" />
@@ -40,9 +33,8 @@
   <li>내 어카운트 주소: <span id="accountAddr"></span></li>
   <li><input id="inpScore" type="text"><button onclick="uploadScore()">점수 기록</button>
       <div id="result"></div></li>
-	<li>새 값 <span id=resNum></span>을 저장한 후 팬딩 트랜잭션이 블록에 포함되면 자동으로 페이지가 업데이트될 것입니다.</li>
 	
-  <li> 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span>명</li>
+  <li> ** 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span>명 **</li>
   <li> 1위 : <span id='GOLD'></span></li>
   <li> 2위 : <span id='SILVER'></span></li>
   <li> 3위 : <span id='BRONZE'></span></li>
